--- a/src/home/home.html
+++ b/src/home/home.html
@@ -56,7 +56,7 @@
         </div>
     </div>
 
-    <div class="member-of-the-day">
+    <div class="member-of-the-day" if.bind="user.config.enable_member_of_the_day">
         <div>
             <span style="padding-top:2px;">
                 <span class="hidden-xs member-prefix">${member_prefix & t}</span>
