--- a/src/stories/stories.html
+++ b/src/stories/stories.html
@@ -206,7 +206,7 @@
                         </form>
                     </div>
                     <div class="row" style="margin-top: 20px;margin-left:23px;"
-                        if.bind="(user.debugging || user.privileges.TESTER) && (user.editing || book_list.length > 0)">
+                        if.bind="(user.config.enable_books) && (user.editing || book_list.length > 0)">
                         <picker options.bind="book_list" 
                             settings.bind="pickerSettings"
                             category="book"
