--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             mode: "no-cors"
             });
             if (response.status == 404) {
-                //alert("Plese refresh");
+                //alert("Please refresh");
                 location.reload(true);
             }
         }
