--- a/src/photos/full-size-photo.html
+++ b/src/photos/full-size-photo.html
@@ -109,6 +109,7 @@
                 </span>
                 <date-range label="photos.photo-date" range_options.bind="[1,2,3,5,10, 20, 50, 100, 120]"
                     change.delegate="save_photo_info($event)" base_date_str.bind="photo_info.photo_date_str"
+                    is_valid.bind="photo_date_valid"
                     hide_label_if_no_date.bind="true" span_size.bind="photo_info.photo_date_datespan">
                 </date-range>
             </span>
