--- a/src/photos/photo-detail.html
+++ b/src/photos/photo-detail.html
@@ -40,6 +40,7 @@
                 <date-range label="photos.photo-date" if.bind="photo_date_str || user.editing"
                     base_date_str.bind="photo_date_str" hide_label_if_no_date.bind="true" enable_days_range.bind="true"
                     span_size.bind="photo_date_datespan" range_options.bind="[1,2,3,5,10,15,20,25,30,50,100,120]"
+                    is_valid.bind="photo_date_valid"
                     change.delegate="update_photo_date($event)">
                 </date-range>
                 <span if.bind="topic_names">${'photos.keywords' & t}: ${topic_names}</span>
