--- a/src/resources/elements/date-range.html
+++ b/src/resources/elements/date-range.html
@@ -1,5 +1,5 @@
 <template>
-    <form class="form-inline date-range" style="height:34px;font-size:90%;" onsubmit="return false;">
+    <form class="form-inline date-range" style="height:34px;" onsubmit="return false;">
         <label if.bind="show_label" style="padding-top:3px;">${label & t}</label>
         <div if.bind="!show_edit_end_date" class="form-group" style="margin-right:0px;width:5em; "></div>
 
