--- a/src/groups/user-info.html
+++ b/src/groups/user-info.html
@@ -63,6 +63,7 @@
                             <date-range label="stories.date" range_options.bind="[1,2,3,5,6,7,10,14,30]"
                                 base_date_str.bind="status_record.photo_info.photo_date_str"
                                 hide_label_if_no_date.bind="false" enable_days_range.bind="true"
+                                is_valid.bind = "photo_date_valid"
                                 span_size.bind="status_record.photo_info.photo_date_datespan">
                             </date-range>
                         </div>
@@ -90,7 +91,7 @@
                         </div>
                         <div style="display:flex;justify-content:space-between">
                             <button name="save-story" click.trigger="save_photo_info()" class="btn btn-sm btn-info"
-                                if.bind="status_record.photo_uploaded" disabled.bind="missing_photo_info || ! dirty">
+                                if.bind="status_record.photo_uploaded" disabled.bind="missing_photo_info || ! dirty || incomplete">
                                 ${"groups.save-photo-story" & t}
                             </button>
                             <button name="cancel-story" click.trigger="cancel_changes()" class="btn btn-sm btn-warning"
