--- a/src/members/members.html
+++ b/src/members/members.html
@@ -9,7 +9,7 @@
                             <search-input value.bind="filter" placeholder="members.filter" height="38"
                                 help_topic="members-help"></search-input>
                         </div>
-                        <div class="input-group members-selector" if.bind="theme.is_desktop && ! relatives_mode">
+                        <div class="input-group members-selector" if.bind="user.advanced_user && theme.is_desktop && ! relatives_mode">
                             <select value.bind="order"
                                 style="height:33px;border-top:solid 2px gray;border-left:solid 2px gray" dir="rtl"
                                 change.trigger="order_changed($event)">
